update base and footer

--- a/_includes/base.liquid
+++ b/_includes/base.liquid
@@ -7,6 +7,9 @@
     <title>RWC 2019 World Cup - Kanban</title>
     <link rel="stylesheet" href="/_includes/styles/kanban.css">
     <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#2C2540">
+    <link rel="shortcut icon" href="/_includes/icons/favicon.ico" />
+    <link rel="apple-touch-icon" href="/_includes/icons/apple-touch-icon.png" />
     <script>
             if ("serviceWorker" in navigator) {
               navigator.serviceWorker
