--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -1,4 +1,4 @@
 <footer class="container">
     <p class="text-block">This website has no affiliation to the 2019 Rugby World Cup, or World Rugby. It is a personal project that is intended for non-commercial use only. No data is saved by this website. User location is detected based on browser settings, and where settings don't exist or are not accessible then a generic page is presented.</p>
-    <p class="text-block text-center">Created by <a href="https://www.fershad.com/" class="link">Fershad Irani</a>.</p>
+    <p class="text-block text-center">Created by <a href="https://www.fershad.com/" class="link">Fershad Irani</a> | <a href="https://github.com/fishintaiwan/rwc2019-chart" class="link">GitHub repo</a></p>
 </footer>
