--- a/_includes/styles/kanban.scss
+++ b/_includes/styles/kanban.scss
@@ -64,10 +64,12 @@ footer {
 .link-group {
   display: grid;
   grid-gap: 10px;
-  grid-template-columns: repeat(auto-fit, 200px);
+  grid-template-columns: repeat(auto-fit, 320px);
+  justify-content: center;
 
   li {
     margin: 0.75rem;
+    overflow-wrap: break-word;
   }
 }
 
