--- a/_includes/styles/kanban.css
+++ b/_includes/styles/kanban.css
@@ -297,12 +297,16 @@ footer {
   display: -ms-grid;
   display: grid;
   grid-gap: 10px;
-  -ms-grid-columns: (200px)[auto-fit];
-      grid-template-columns: repeat(auto-fit, 200px);
+  -ms-grid-columns: (320px)[auto-fit];
+      grid-template-columns: repeat(auto-fit, 320px);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .link-group li {
   margin: 0.75rem;
+  overflow-wrap: break-word;
 }
 
 .board {
