--- a/_includes/styles/kanban.scss
+++ b/_includes/styles/kanban.scss
@@ -228,6 +228,10 @@ footer {
     font-size: 1.25rem;
     margin-bottom: 0.5rem;
     color: #2c2540;
+
+    .score {
+      font-family: 'Karla', sans-serif;
+    }
   }
 }
 
